# pandy_mobile_flores

./: README.md
FLORES-A-Reconfigured-Wheel-Legged-Robot-for-Enhanced-Steering-and-Adaptability-main/: README.md
FLORES-A-Reconfigured-Wheel-Legged-Robot-for-Enhanced-Steering-and-Adaptability-main/Mechanical/body/: batteryandcomputerholder.STEP  batteryholder1.STEP  frontabad_stopper_static.STEP  handle.STEP  lateralFrame_v2.STEP  lowerFrametype2.STEP  lowerFrametype3.STEP  middleFrame_v2.STEP  motor2body2_v2.STEP  motor2body3.STEP  rearabad_stopper.STEP
FLORES-A-Reconfigured-Wheel-Legged-Robot-for-Enhanced-Steering-and-Adaptability-main/Mechanical/leg/: abad2hip_v2.STEP  cam.STEP  hip2kneeV2.STEP  hip_stopper_static.STEP  link.STEP  lowerFramebearing.STEP  shaft1.STEP  shaft3.STEP  spacer.STEP  stoperRight.STEP  upperLegShellLeft2.STEP  upperLegShellRight.STEP  upperLegShellRight2.STEP  wheelhubv2.STEP
Mechanical/body/: computerholder.STEP  frontabad_stopper_rot.STEP  frontfeetsupport_v2.STEP  imu_holder_v3.STEP  lowerFramebearing.STEP  motor2body1v2.STEP  rib.STEP  upperFrametype2_v3.STEP
Mechanical/leg/: driverheatpad.STEP  frontfeetsupport2.STEP  frontfeetsupport_v2.STEP  hip_stopper_rot.STEP  shank2wheel.STEP  shank300Left.STEP  shank300Right.STEP  spacer2.STEP  stoperLeft.STEP  upperLegShellLeft.STEP
code/: README.md
code/Mdog/commands/control_input_msgs/: package.xml
code/Mdog/commands/joystick_input/: package.xml
code/Mdog/commands/keyboard_input/: package.xml
code/Mdog/hardwares/motor/rtecm_motor/: CMakeLists.txt  package.xml
code/Mdog/hardwares/motor/rtecm_motor/include/soem/: ethercatconfig.h  ethercatconfiglist.h
code/Mdog/hardwares/motor/rtecm_motor/src/: chry_ringbuffer.c  chry_ringbuffer.h  udptools.h  youdaTest.c  youda_pd.c
code/xml/mdog/: mdog.xml  scene.xml
code/xml/mdog/assets/: FR_calf.STL  (+8 more)
(+151 files in other folders)
